# EyerPlayer

EyerPlayerAndroid/app/: build.gradle
EyerPlayerAndroid/gradle/wrapper/: gradle-wrapper.properties
src/: CMakeLists.txt
src/EyerAV/: CMakeLists.txt
src/EyerAndroidInterface/: CMakeLists.txt  Interface.cpp
src/EyerColorSpace/: CMakeLists.txt  EyerColorSpaceHeader.hpp
src/EyerDecodeQueue/: CMakeLists.txt
src/EyerEvent/: CMakeLists.txt  EyerEventHeader.hpp  EyerPlayerEvent_Pause.cpp  EyerPlayerEvent_Pause.hpp  EyerPlayerEvent_Resume.cpp  EyerPlayerEvent_Resume.hpp  EyerPlayerEvent_Seek.cpp  EyerPlayerEvent_Seek.hpp
src/EyerJNI/: CMakeLists.txt  EyerJNIByteArray.hpp  EyerJNIEnv.cpp  EyerJNIEnv.hpp  EyerJNIEnvManager.hpp  EyerJNIHeader.hpp  EyerJNIObject.hpp  README.md
src/EyerPlayer/: CMakeLists.txt  EyerPlayer.cpp  EyerPlayer.hpp
tools/android/: build_eyer_player_android.sh  gen_jni_header.sh
